# duckdb-mongo

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  extension_config.cmake
.agents/skills/: bump-duckdb-version.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: MainDistributionPipeline.yml  MongoDBTests.yml
benchmarks/: README.md  benchmark-mongodb-queries.py  benchmark-pushdowns.sh  benchmark-tpch.sh  pushdown_queries.sql
benchmarks/data/: returnflag_dim.csv
scripts/: create-tpch-mongo.sh
src/: mongo_catalog.cpp  mongo_clear_cache.cpp  mongo_expr_pushdown.cpp  mongo_extension.cpp  mongo_filter_pushdown.cpp  mongo_instance.cpp  mongo_optimizer.cpp  mongo_schema_entry.cpp  mongo_schema_inference.cpp  mongo_secrets.cpp  mongo_storage_extension.cpp  mongo_table_function.cpp  mongo_transaction.cpp  mongo_transaction_manager.cpp
src/include/: mongo_catalog.hpp  mongo_compat.hpp  mongo_expr_pushdown.hpp  mongo_filter_pushdown.hpp  mongo_instance.hpp  mongo_optimizer.hpp  mongo_schema_entry.hpp  mongo_secrets.hpp  mongo_storage_extension.hpp  mongo_table_function.hpp  mongo_transaction.hpp  mongo_transaction_manager.hpp
src/schema/: mongo_schema_inference_helpers.cpp  mongo_schema_inference_internal.hpp
test/: README.md  create-mongo-tables.sh
test/integration/: extension_helper_stub.cpp  test_atlas_integration.cpp
test/sql/attach/: attach_basic.test  attach_connection.test  attach_errors.test  attach_multiple.test  catalog_operations.test
test/sql/cache/: clear_cache.test
test/sql/edge_cases/: empty_collections.test
test/sql/query/: aggregations.test  basic.test  complex_filters.test  count_pushdown.test  filter_pushdown_plan.test  filters.test  groupby_pushdown.test  objectid_filter.test  pushdown_comprehensive.test  pushdown_edge_cases.test  pushdown_negative.test  substr_filter_pushdown.test  topn_pushdown.test
test/sql/schema/: array_items.test  arrays.test  case_variant_fields.test  (+5 more)
(+4 files in other folders)
